Fix: Render port 10000, Hikari pool tuning, health check for Aiven MySQL